syntax = "proto3";

option go_package = "common/communication/protocol";



message OmegaEOF {
    message Data {
        string stage = 1;
        string tasksCount = 2;
        string eofType = 3;
    }

    Data data = 1;
}