syntax = "proto3";

option go_package = "common/communication/protocol";


message Kappa {
    message Data {
        string movieId = 1;
        string actorId = 2;
        string actorName = 3;
    }

    repeated Data data = 1;
}